2006-08-15  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_WriteGedcom.py: support for AGE, CAUSE, and AGENCY
	* src/GrampsDb/_ReadGedcom.py: support for AGE, CAUSE, and AGENCY
	* src/GrampsDb/_GedTokens.py: support for AGE and AGENCY

2006-08-15  Alex Roitman  <shura@gramps-project.org>
	* src/FilterEditor/_EditFilter.py (on_edit_clicked,on_add_clicked):
	Pass filter name to the rule editor.
	* src/FilterEditor/_EditRule.py (EditRule.__init__): Pass filter
	name to MyFilters.
	(MyFilters.__init__): Exclude filter being edited from the
	matching filter.
	* example/gramps/data.gramps: Add Age and Cause  event attributes.
	* example/gramps/example.gramps: Add Age and Cause  event attributes.
	* src/GrampsDb/_ReadXML.py (start_attribute): Support attributes
	in event and eventref;
	(stop_cause): Create attribute on cause tag.
	* src/Editors/_EditEventRef.py (_create_tabbed_pages): Typos.
	* src/Editors/_EditEvent.py (_create_tabbed_pages): Typo.
	* data/grampsxml.rng: Document XML changes (xml 1.1.2).
	* data/grampsxml.dtd: Document XML changes (xml 1.1.2).
	* src/GrampsDb/_WriteXML.py (dump_event_ref): Write attributes;
	(write_event): write attributes, remove cause.
	* src/GrampsDb/_GrampsBSDDB.py: Cleanup on upgrades.

2006-08-14  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py (gramps_upgrade_10): Add an upgrade
	path from 2.1.91.
	* src/RelLib/_AttributeType.py: Add new attribute types for events
	and event references.
	* src/RelLib/_EventRef.py: Add attribute list.
	* src/RelLib/_Event.py: Add attribute list.

2006-08-14  Brian Matherly  <brian@gramps-project.org>
	* src/gramps.py: mask strange Windows logging error on close

2006-08-14  Alex Roitman  <shura@gramps-project.org>
	* src/docgen/PdfDoc.py: Work for both utf8 and latin-1 capable
	reportlab versions.
	* src/Filters/Rules/Family/_ChildHasNameOf.py (description): Typo.
	* src/Filters/Rules/Family/_ChildHasIdOf.py (description): Typo.